--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -49,9 +49,9 @@
       <img src="/images/virtual-icon.svg" alt="computer icon" />
     {{/if}}
     <span id="event-dop">Date of Play: {{event.date}}</span>
-    {{#if event.is_public}}
+    {{#unless event.is_public}}
       <img src="/images/private-icon.svg" alt="private icon" />
-    {{/if}}
+    {{/unless}}
     {{#ifEquals event.host_id userId}}
       <button onclick="addAttendee()">Add Member</button>
       <input type="text" name="addUser" id="addAttendee">
