--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,7 +21,7 @@
           <a href="/api/events/create-event">Host Event</a>
           <a href="" onclick="logout()">Logout</a>
         {{else}}
-          <a href="/login">Login</a>
+          <a href="/login">Login/Register</a>
         {{/if}}
       </div>
       <!-- TODO - Impliment filter -->
