--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,14 +30,14 @@ header {
   background-color: var(--color-secondary);
   color: var(--color-on-secondary);
   display: flex;
-  /*border-bottom-right-radius: var(--border-radius);*/
+/*  border-bottom-right-radius: var(--border-radius)*/
 }
 
 .logo {
   width: 14rem;
-  height: 9rem;
+  height: 8.5rem;
   padding: .5rem 0;
-  border-radius: var(--border-radius)
+  /*border-radius: var(--border-radius);*/
   background-color: var(--color-secondary);
 }
 
@@ -172,6 +172,11 @@ aside h3 {
   width: 20px;
   height: 20px;
   display: inline;
+}
+
+.cardStyle img {
+  width: 20px;
+  height: 20px;
 }
 
 /* Responsive Styles */
