columnized hosting and attending events for ease of reading

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -38,10 +38,10 @@
         <label for="signUpConfirmPassword">Confirm Password:</label>
         <input type="password" class="formInput" id="signUpConfirmPassword" />
       </div>
-      <form action="/action_page.php">
+      {{!-- <form action="/action_page.php">
         <label for="img">Select Profile Picture:</label>
         <input type="file" id="avatarPic" name="avatarPic" accept="image/*" />
-      </form>
+      </form> --}}
       <div class="signUpGrouping">
         <button class="signUpButton" type="submit">Sign Up</button>
       </div>
