--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -106,6 +106,14 @@ aside h3 {
   flex-direction: column;
 }
 
+.content-container h1 {
+  font-size:x-large;
+}
+
+#legend {
+  padding: 2rem;
+}
+
 /* Event Card Styles */
 #event-container {
   display: grid;
@@ -177,6 +185,13 @@ aside h3 {
 .cardStyle img {
   width: 20px;
   height: 20px;
+}
+
+.tabcontent {
+  font-size: larger;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Responsive Styles */
