--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -194,9 +194,34 @@ aside h3 {
   flex-direction: column;
 }
 
+.displayName {
+  display: flex;
+  flex-direction: row;
+}
+
+.displayName img {
+  height: 90px;
+  width: 90px;
+  padding: 15px;
+}
+
+#displayName {
+  font-size: 3rem;
+}
+
 #pending-invites {
   display: inline;
   padding: 25px 0px;
+}
+
+.tab {
+  padding: 10px 0px;
+}
+
+.modal {
+  padding: 20px 0px 10px 0px;
+  display: flex;
+  flex-direction: column;
 }
 
 /* Responsive Styles */
