changed up spacing on event card for readability

--- a/views/event.handlebars
+++ b/views/event.handlebars
@@ -18,9 +18,9 @@
     </div>
     <div id="event-location">
       {{#if event.is_virtual}}
-        <span>Link:</span>
+        <span class="link">Link:</span>
       {{else}}
-        <span>Location:</span>
+        <span class="loc">Location:</span>
       {{/if}}
       <span>{{event.location}}</span>
     </div>
