--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -176,6 +176,43 @@ aside h3 {
   justify-content: end;
 }
 
+#event-title {
+  font-size: 2rem;
+  padding: 10px 10px 20px 0px;
+}
+
+#event-game {
+  padding: 10px 10px 20px 0px;
+  display: flex;
+  flex-direction: column;
+  font-weight:600
+}
+
+#event-game h3 {
+  font-weight: lighter;
+}
+
+#event-description {
+  padding: 10px 20px 20px 0px;
+}
+
+#event-notes {
+  padding: 10px 20px 20px 0px;
+}
+
+#event-notes span {
+  font-weight: bold;
+}
+
+#event-location {
+  display: flex;
+  flex-direction: column;
+}
+
+#event-attendees {
+  padding: 20px 20px 30px 0px;
+}
+
 #event-attendees img {
   width: 20px;
   height: 20px;
